# scp_mpc

./: .gitmodules  CMakeLists.txt  README.md
src/: dynamics_test.py  main.py  mpc.py  opt_problem.py  plot.py  qp_bindings.cpp  scp.py  sim.py  solve.py
src/mpc_socp_solver/: README.html  cpg_solver.py  problem.pickle  setup.py
src/mpc_socp_solver/c/: CMakeLists.txt
src/mpc_socp_solver/c/include/: cpg_solve.h  cpg_workspace.h
src/mpc_socp_solver/c/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
src/mpc_socp_solver/cpp/include/: cpg_module.hpp
src/mpc_socp_solver/cpp/src/: cpg_module.cpp
src/scp_socp_solver/: README.html  cpg_solver.py  problem.pickle  setup.py
src/scp_socp_solver/c/: CMakeLists.txt
src/scp_socp_solver/c/include/: cpg_solve.h  cpg_workspace.h
src/scp_socp_solver/c/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
src/scp_socp_solver/cpp/include/: cpg_module.hpp
src/scp_socp_solver/cpp/src/: cpg_module.cpp
src/scp_solver/: README.html  cpg_solver.py  problem.pickle  setup.py
src/scp_solver/c/: CMakeLists.txt
src/scp_solver/c/include/: cpg_solve.h  cpg_workspace.h
src/scp_solver/c/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
src/scp_solver/cpp/include/: cpg_module.hpp
src/scp_solver/cpp/src/: cpg_module.cpp
src/solver/: README.html  cpg_solver.py  problem.pickle  setup.py
src/solver/c/: CMakeLists.txt
src/solver/c/include/: cpg_solve.h  cpg_workspace.h
src/solver/c/src/: cpg_example.c  cpg_solve.c  cpg_workspace.c
src/solver/cpp/include/: cpg_module.hpp
src/solver/cpp/src/: cpg_module.cpp
